--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+    <link href="resources/css/styles.css" rel="stylesheet" type="text/css">
     <title>Broadway Design</title>
   </head>
   <header>
