--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <body>
     <h2>Our Process</h2>
     <p>
-      <img src="resources/images/identify.jpg" />
+      <img src="resources/images/identify.svg" />
     </p>
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
     <p>
-      <img src="resources/images/understand.jpg" />
+      <img src="resources/images/understand.svg" />
     </p>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
