--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
       <p>
-        <img src="resources/images/execute.png" />
+        <img src="resources/images/execute.svg" />
       </p>
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
