--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <header>
       <h1>Broadway Design</h1>
       <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Process</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+          <p><a href="#">Home</a></p>
+          <p><a href="#process">Process</a></p>
+          <p><a href="#work">Work</a></p>
+          <p><a href="#team">Team</a></p>
+          <p><a href="#contact">Contact</a></p>
       </nav>
     </header>
     <main>
-      <h2>Our Process</h2>
+      <h2 id="process">Our Process</h2>
       <p>
         <img src="resources/images/identify.svg" />
       </p>
@@ -32,14 +30,14 @@
       <p>
         <img src="resources/images/execute.svg" />
       </p>
-      <h3>Execute</h3>
+      <h3 id="work">Execute</h3>
       <p>We put everything we have into our work.</p>
       <p class="banner">Designed in New York</p>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
-      <h3>Team</h3>
+      <h3 id="team">Team</h3>
       <p>We're Hiring!</p>
-      <h3>Contact</h3>
+      <h3 id="contact">Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>Email: test@example.com</p>
       <p>Twitter: @test</p>
