changes to better match mockup

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   <body>
     <header>
       <h1>Broadway Design</h1>
-      <nav>
-          <p><a href="#">Home</a></p>
-          <p><a href="#process">Process</a></p>
-          <p><a href="#work">Work</a></p>
-          <p><a href="#team">Team</a></p>
-          <p><a href="#contact">Contact</a></p>
-      </nav>
+      <p><a href="#">Home</a></p>
+      <p><a href="#process">Process</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
     </header>
     <main>
       <h2 id="process">Our Process</h2>
@@ -46,6 +44,13 @@
       <p class="copyright">
         © Broadway 2016
       </p>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </footer>
   </body>
 </html>
