--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <p class="copyright">
         © Broadway 2016
       </p>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#process">Process</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <span>
+        <a href="#">Home</a> 
+        <a href="#process">Process</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+      </span>
     </footer>
   </body>
 </html>
