--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <p>Twitter: @test</p>
     </main>
     <footer>
-      <p class="copyright">
+      <span class="copyright">
         © Broadway 2016
-      </p>
+      </span>
       <span>
         <a href="#">Home</a> 
         <a href="#process">Process</a>
