--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </p>
       <h3 id="work">Execute</h3>
       <p>We put everything we have into our work.</p>
-      <p class="banner">Designed in New York</p>
+      <h3 class="banner">Designed in New York</h3>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
       <h3 id="team">Team</h3>
