--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </span>
       <span>
         <a href="#">Home</a> 
-        <a href="#process">Process</a>
+        <a href="#process">About</a>
         <a href="#work">Work</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
